# asn-models

./: .gitignore  Cargo.toml  LICENSE  README.md  free5gc_ueransim.pcap  rust-analyzer.json
asn1-generator/asn1/ngap/: 38413-ha0.docx  NGAP-Constants.asn  NGAP-IEs.asn  NGAP-PDU-Contents.asn  NGAP-PDU-Descriptions.asn  parse_spec.py
asn1-generator/src/: autogen.py  config.py  render.py
asn1-per/: Cargo.toml
asn1-per/src/: bitstring.rs  error.rs  lib.rs  transaction.rs
ngap/: Cargo.toml
ngap/src/: common.rs  id.rs  ies.rs  lib.rs  pdu.rs  test.rs  top_pdu.rs
ngap/tests/: test_encode_decode.rs  test_ueransim.rs
xxap/: Cargo.toml
xxap/src/: conversion.rs  ies.rs
