[package]
name = "asn1-per"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog.workspace = true
anyhow.workspace = true
async-channel.workspace = true
asn1-codecs.workspace = true
thiserror.workspace = true
num_enum.workspace = true
bitvec.workspace = true
nonempty.workspace = true
async-trait.workspace = true
tracing.workspace = true
valuable.workspace = true
faster-hex.workspace = true

[features]
default = ["gnb"]
amf = []
gnb = []


