[package]
name = "ngap"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
asn1-per = { path = "../asn1-per" }
hex.workspace = true
xxap = { path = "../xxap" }
slog.workspace = true
anyhow.workspace = true
num_enum.workspace = true
async-trait.workspace = true
smart-default.workspace = true
