[package]
name = "xxap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1-per = { path = "../asn1-per" }
async-net.workspace = true
bitvec.workspace = true
hex.workspace = true
slog.workspace = true
anyhow.workspace = true
num_enum.workspace = true
async-trait.workspace = true
smart-default.workspace = true

[lib]
doctest = false
