[package]
name = "xxap"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1-per = { path = "../asn1-per", default-features = false, optional = true }
async-net.workspace = true
bitvec.workspace = true
hex.workspace = true
slog.workspace = true
anyhow.workspace = true
num_enum.workspace = true
async-trait.workspace = true
smart-default.workspace = true

[lib]
doctest = false

[features]
default = ["gnb"]
amf = ["asn1-per/amf"]
gnb = ["asn1-per/gnb"]
